# azure-cognitive-search-organizer

./: .env sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: install_chromedriver.sh
src/: helper.py  main.py
