[tool.poetry]
name = "azure-cognitive-search-organizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "azure_cognitive_search_organizer"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
selenium = "^4.10.0"
undetected-chromedriver = "^3.5.0"
lxml = "^4.9.3"
openai = "^0.27.8"
pandas = "^2.0.3"
tqdm = "^4.65.0"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
